# LichtFeld-StudioClone

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_lichtfeld.ps1  cleanbuild3.bat  cleanbuild4.bat  dirtybuild.bat  vcpkg.json
.github/workflows/: nightly.yml  runtime-image.yml  ubuntu.yml  windows.yml
cmake/: FetchLibvterm.cmake  FetchUV.cmake  config.h.in
docker/: Dockerfile
docs/: PYTHON_API.md  Python_UI.md  plugin-dev-workflow.md  plugin-system.md
docs/development/: vulkan-viewer-migration.md
docs/plugins/: api-reference.md  getting-started.md
eval/: default_optimization_params.json  legacy_benchmark_mipnerf360_adc.sh  mcmc_optimization_params.json
include/core/: argument_parser.hpp  events.hpp  logger.hpp  parameters.hpp
include/core_new/: cuda_debug.hpp  events.hpp  gradient_check.hpp  image_io.hpp  parameters.hpp  splat_data.hpp  tensor.hpp  tensor_debug.hpp  tensor_trace.hpp  training_snapshot.hpp
include/io/: cache_image_loader.hpp  loader.hpp
include/loader_new/: cache_image_loader.hpp
include/rendering/: rendering.hpp
include/rendering_new/: rendering.hpp
parameter/: default_optimization_params.json  mcmc_optimization_params.json
scripts/: validate_localization.py
src/: application.cpp  main.cpp
src/app/: application.cpp  converter.cpp  main.cpp  mcp_gui_tools.cpp  mcp_runtime_tools.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  bhatt_lod.cpp  camera.cpp  checkpoint_format.cpp  image_io.cpp  logger.cpp  parameters.cpp  property_registry.cpp  scene.cpp  splat_data.cpp  splat_data_transform.cpp  training_snapshot.cpp
src/core_new/: CMakeLists.txt  argument_parser.cpp  camera.cpp  image_io.cpp  parameters.cpp  splat_data.cpp  splat_data_transform.cpp  tensor_debug.cpp  training_snapshot.cpp
src/diagnostics/: vram_profiler.cpp
src/io/: CMakeLists.txt  blender_loader.cpp  cache_image_loader.cpp  filesystem_utils.hpp  loader.cpp  loader_interface.hpp  loader_service.cpp  loader_service.hpp  nvcodec_image_loader.cpp  nvcodec_image_loader.hpp  pipelined_image_loader.cpp  video_frame_extractor.cpp  video_player.cpp  video_player.hpp
src/loader/: cache_image_loader.cpp
src/loader_new/: CMakeLists.txt  cache_image_loader.cpp  nvcodec_image_loader.cpp  nvcodec_image_loader.hpp
src/mcp/: CMakeLists.txt  llm_client.cpp  llm_client.hpp  main.cpp  mcp_protocol.cpp  mcp_protocol.hpp  mcp_server.cpp  mcp_server.hpp  mcp_tools.cpp  mcp_tools.hpp  mcp_training_context.cpp  mcp_training_context.hpp  selection_client.cpp  selection_client.hpp  shared_scene_tools.cpp  shared_scene_tools.hpp
src/python/: CMakeLists.txt  package_manager.cpp  plugin_runner.cpp  plugin_runner.hpp  py_panel_registry.cpp  py_panel_registry.hpp  python_runtime.cpp  python_runtime.hpp  runner.cpp  runner.hpp  subprocess.hpp  ui_hooks.cpp  ui_hooks.hpp
src/rendering/: CMakeLists.txt  cuda_gl_interop.cpp  cuda_gl_interop.hpp  cuda_vulkan_interop.cpp  cuda_vulkan_interop.cu  gs_rasterizer_tensor.cpp  gs_rasterizer_tensor.hpp  mesh2splat_cpu.cpp  point_cloud_raster.cu  raster_rendering_engine.cpp  rendering_engine_impl.cpp  rendering_engine_impl.hpp  rendering_pipeline.cpp  rendering_pipeline.hpp  selection_ops.cu  selection_ops.hpp  viewport_gizmo.cpp
src/rendering/rasterizer/vulkan/: CMakeLists.txt
src/rendering/rasterizer/vulkan/shader/src/slang/: alphablend_shader.slang  selection_mask.slang  selection_polygon_rasterize.slang  tile_batch_shader.slang
src/rendering/rasterizer/vulkan/src/: gs_renderer.cpp  gs_renderer.h
src/rendering_new/: CMakeLists.txt  camera_frustum_renderer.cpp  camera_frustum_renderer.hpp  grid_renderer.cpp  gs_rasterizer_tensor.cpp  gs_rasterizer_tensor.hpp  point_cloud_renderer.hpp  rendering_engine_impl.cpp  rendering_engine_impl.hpp  rendering_pipeline.cpp  rendering_pipeline.hpp  text_renderer.cpp  viewport_gizmo.cpp  viewport_gizmo.hpp
src/sequencer/: CMakeLists.txt  animation_clip.cpp  animation_clip.hpp  animation_track.cpp  animation_track.hpp  animation_value.cpp  animation_value.hpp  interpolation.cpp  interpolation.hpp  keyframe.hpp  timeline.cpp  timeline.hpp
src/training/: CMakeLists.txt  checkpoint.cpp  checkpoint.hpp  dataset.hpp  trainer.cpp  trainer.hpp  training_setup.cpp
src/training_debug/: training_debug.cpp
src/training_new/: CMakeLists.txt  trainer.cpp  trainer.hpp  training_setup.cpp  training_setup.hpp
src/visualizer/: CMakeLists.txt  gui_capabilities.cpp  visualizer_impl.cpp  visualizer_impl.hpp
src/visualizer_new/: CMakeLists.txt  visualizer_impl.cpp  visualizer_impl.hpp
tests/: CMakeLists.txt  benchmark_default_strategy.cpp  benchmark_pipelined_loader.cpp  benchmark_ppisp_controller.cpp  benchmark_scheduler.cpp  profile_adam_optimizer.cpp  test_add_new_gs_deterministic.cpp  test_add_new_gs_tensor_ops.cpp  test_allocator_policy.cpp  test_argument_parser.cpp  test_background_image.cpp  test_bool_reduction.cpp  test_colmap_image_layout.cpp  test_compressed_ply.cpp  test_controller_memory.cpp  test_converter_usd.cpp  test_cpu_dtype_conversions.cpp  test_cpu_large_tensor_bugs.cpp  test_default_strategy.cpp  test_default_strategy_operations_comparison.cpp  test_default_strategy_real_conditions.cpp  test_default_strategy_vs_reference.cpp  test_extended_unary_ops_vs_torch.cpp  test_fastgs_analytical_gradients.cpp  test_fastgs_fuzz.cpp  test_fastgs_kernels.cpp  test_fused_l1_ssim.cpp  test_gsplat_rasterizer.cpp  test_gsplat_training_debug.cpp  test_gsplat_vs_legacy_gsplat_gut.cpp  test_gut_gsplat_comparison.cpp  test_image_resize_parallel.cpp  test_input_controller_dataset_load.cpp  test_input_controller_focus.cpp  test_lfs_adam_optimizer.cpp  test_lfs_losses.cpp  test_lfs_scheduler.cpp  test_loader_comparison.cpp  test_mask_loss.cpp  test_mcmc_critical_bugs.cpp  (+48 more)
tests/python/: test_app_state.py  test_asset_manager_panel.py  test_capability_thread_safety.py  test_errors.py  test_event_keypad_mapping.py  test_export_panel.py  test_gil_safety.py  test_gui_headless.py  test_hook_edge_cases.py  test_hooks.py  test_hot_reload_edge_cases.py  test_hot_reload_fixes.py  test_icon_cache.py  (+31 more)
(+691 files in other folders)
